--- a/index.html
+++ b/index.html
@@ -6,47 +6,46 @@
     rel="stylesheet"/>
 </head>
 <body >
-<div class="container">   
+  <div class="container">   
+    <iframe  class="video" width="560" height="315" src="https://www.youtube.com/embed/-DyiYq-PyRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="info">
-        <img src="https://sun9-14.userapi.com/impg/9dF4LMxUiZiEidw4Ps8o3xFXO6SM8RYWpQMTvg/SV4krUCxf1s.jpg?size=1200x1057&quality=95&sign=522ddfa6591c19d599d767a32a021e44&type=album" 
-        alt=""  class="ruffsavatar"/> 
-        <h1 style="font-weight:bold;font-size:100%;background:-webkit-linear-gradient(330deg, purple, red, orange);-webkit-background-clip:text;-webkit-text-fill-color:transparent;">
-        Генерал Гавс (англ. Colonel Ruffs )  </h1>
-        <p>«Генерал Гавс — командир космического отряда, а ещё... собака. 
-        Из своего ружья он стреляет двойными лазерами,
-        которые могут отскакивать от стен и
-        вызывает авиастанцию для помощи напарникам!»</p>
+        
+      <img src="//sun9-14.userapi.com/impg/9dF4LMxUiZiEidw4Ps8o3xFXO6SM8RYWpQMTvg/SV4krUCxf1s.jpg?size=1200x1057&quality=95&sign=522ddfa6591c19d599d767a32a021e44&type=album" 
+      alt=""  class="ruffsavatar"/>  
+      <h1 style="font-weight:bold;font-size:100%;background:-webkit-linear-gradient(330deg, purple, red, orange);-webkit-background-clip:text;-webkit-text-fill-color:transparent;">
+      Генерал Гавс (англ. Colonel Ruffs )  </h1>
+      <p>«Генерал Гавс — командир космического отряда, а ещё... собака. 
+      Из своего ружья он стреляет двойными лазерами,
+      которые могут отскакивать от стен и
+      вызывает авиастанцию для помощи напарникам!»</p>  
+
+      <h2 >О Генерале Гавсе</h2>
+
+      <a target="_blank" href="//brawlstars.fandom.com/ru/wiki/%D0%93%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D0%BB_%D0%93%D0%B0%D0%B2%D1%81#.D0.9B.D0.B8.D1.87.D0.BD.D1.8B.D0.B5_.D0.B4.D0.B0.D0.BD.D0.BD.D1.8B.D0.B5">
+      Биография</a>
+      |
+      <a target ="_blank" 
+      href="//www.youtube.com/watch?v=TBn48HQe87s"> 
+      Создание Сквика</a>
     </div>
 
+  
 
-<hr color="purple">
-
-    <div class="about">   
-        <h2 >О Генерале Гавсе</h2>   
-        <p> <a target="_blank" href="https://brawlstars.fandom.com/ru/wiki/%D0%93%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D0%BB_%D0%93%D0%B0%D0%B2%D1%81#.D0.9B.D0.B8.D1.87.D0.BD.D1.8B.D0.B5_.D0.B4.D0.B0.D0.BD.D0.BD.D1.8B.D0.B5">
-        Биография</a></p>
-        <p><a target ="_blank" 
-        href="https://www.youtube.com/watch?v=TBn48HQe87s"> 
-        Создание Сквика</a></p>
-    </div>
-
-<hr color="purple">
+  <div class="card">
+    <h2 class="cardtitle">Сферы деятельности:</h2>
+       <ul class="ulist">
+        <li>Военнослужащий</li>
+        <li>Ветеран боевых действий</li>
+        <li>Участник банды "Космоопера старр"</li>
+        <li>Пилот и капитан корабля</li>
+       </ul>
+  </div>
 
 
-<h2>Сферы деятельности:</h2>
-<ul>
-    <li>Военнослужащий</li>
-    <li>Ветеран боевых действий</li>
-    <li>Участник банды "Космоопера старр"</li>
-    <li>Пилот и капитан корабля</li>
-</ul>
 
-
-<hr color="purple">
-
-
-<h2>Опыт работы</h2>
-<table border="1"> 
+<div class="card">
+  <h2>Опыт работы</h2>
+    <table class="table" > 
     <tr>
 <th>Место работы</th>
 <th>Должность</th>
@@ -62,14 +61,13 @@
 <td>Боец</td>
 <td>01/02/21-н.в</td>
 </tr>
-</table>
-<br>
+    </table>
+  
+</div>    
+  
 
-
-<hr color="purple">
-
-
-    <H2>Напишите  Гавсу</H2>
+  <div class="card">
+    <h2>Напишите  Гавсу</h2>
     <form >
         <label for="name">Ваше имя:</label>
         <input type="text" id="name" placeholder="Пишите здесь">
@@ -86,6 +84,8 @@
         <br>
     <input type="submit" value="Отправить">
     </form>
+  </div>
+       
 </div> 
 </body>
 </html>
