--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <a target ="_blank" 
       href="//www.youtube.com/watch?v=TBn48HQe87s"> 
       Создание Сквика</a>
+      |
+      <a href="scripts.html">Тест js</a>
     </div>
 
   
@@ -91,5 +93,6 @@
   
        
 </div> 
+<script src="app.js"></script>
 </body>
 </html>
